src/test/wacc/invalid/syntaxErr/pairs/noNesting.wacc
# pair types cannot be nested

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    pair(pair(int, string), char) p = null
end
